# haskell-course

./: README.md
Homework/Homework01/: Homework01.hs
Homework/Homework02/: Homework02.hs
Homework/Homework03/: Homework03.hs
Homework/Homework04/: Homework04.hs
Homework/Homework05/: Homework05.hs
Homework/Homework06/: Homework06.hs
Homework/Homework07/: Homework07.hs
Homework/Homework08/: Homework.hs
Homework/Homework11/: Homework.hs
Homework/Homework12/: Homework.hs
Homework/Homework13/: Homework.hs
Homework/Homework14/: Homework.hs
Homework/Homework16/: Homework.hs
Homework/Homework17/: Homework.hs
Homework/Homework18/: Homework.hs
Homework/Homework19/: Homework18.cabal
Homework/Homework19/app/: Main.hs
Homework/Homework20/: CHANGELOG.md  Homework20.cabal
Homework/Homework20/app/: Homework.hs
lessons/: 01-Introduction-to-haskell.ipynb
