cabal-version:      2.4
name:               Homework16
version:            0.1.0.0

author:             perturbing
maintainer:         thomas.vellekoop@iohk.io

executable Homework16
    main-is:          Main.hs
    build-depends:    base
                    , aeson
                    , bytestring
                    , http-conduit
                    , async
    hs-source-dirs:   app
    default-language: Haskell2010
